--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,23 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
 
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope[0]=profile
+spring.security.oauth2.client.registration.google.scope[1]=email
+
+spring.security.oauth2.client.registration.github.client-id=${GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.scope[0]=read:user
+spring.security.oauth2.client.registration.github.scope[1]=user:email
+
+spring.security.oauth2.client.registration.user-service.client-id=user-service-client
+spring.security.oauth2.client.registration.user-service.client-secret=secret
+spring.security.oauth2.client.registration.user-service.authorization-grant-type=client_credentials
+spring.security.oauth2.client.registration.user-service.provider=user-service
+spring.security.oauth2.client.provider.user-service.token-uri=http://localhost:${server.port}/oauth2/token
+
 #spring.data.redis.host=localhost
 #spring.data.redis.port=6379
 
-#logging.level.org.springframework.security=trace
+logging.level.org.springframework.security=trace
