--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,13 @@ spring.security.oauth2.client.registration.github.client-secret=${GITHUB_CLIENT_
 spring.security.oauth2.client.registration.github.scope[0]=read:user
 spring.security.oauth2.client.registration.github.scope[1]=user:email
 
+spring.security.oauth2.client.registration.facebook.client-id=${FACEBOOK_CLIENT_ID}
+spring.security.oauth2.client.registration.facebook.client-secret=${FACEBOOK_CLIENT_SECRET}
+spring.security.oauth2.client.registration.facebook.scope[0]=email
+spring.security.oauth2.client.registration.facebook.scope[1]=public_profile
+spring.security.oauth2.client.registration.facebook.scope[2]=user_birthday
+spring.security.oauth2.client.registration.facebook.scope[3]=user_gender
+
+spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,name,email,picture,birthday,first_name,last_name
+
 #logging.level.org.springframework.security=trace
