--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.open-in-view=false
 
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 
